# ILC-app

./: .gitignore  Gruntfile.js  README.md  TODO.md  VERSION-CAVEATS.md  application.py  bower.json  ilc-app.sublime-project  ilc.sublime-project  ilc.sublime-workspace  make.py  package.json  requirements.txt  util.py  workflow-ideas.txt
app/: _base.jade  index.html  index.jade
app/json-data/: converted-polygons-10.json  converted-polygons-500.json  development-naics-trends.json  development-polygons-500.json
app/scripts/: choropleth-swatches.coffee  coffee.coffee  http.coffee  main.js  settings.coffee  test.coffee
app/scripts/classes/: feature2d.class.coffee  industrialpolygon.class.coffee  polygon.class.coffee
app/styles/: app.scss
backend/conf/: projects.py  settings.py
conf/: projects.py  settings.py
frontend/: Gruntfile.coffee  Gruntfile.js  bower.json  package.json
frontend/app/: _base.html  bower_components  index.jade
frontend/app/coffee/: ILC.coffee  app-init.coffee  choropleth-swatches.coffee  settings.coffee
frontend/app/jade/: _base.jade  index.jade
frontend/app/json-data/: brownfields.geojson
frontend/app/sass/: app.scss  main.scss
frontend/app/scripts/: ILC.coffee  app-init.coffee
frontend/www/: _base.html  index.html
lib/: README
lib/libspatialite-amalgamation-3.0.1/: Makefile  config.status  libtool  spatialite.pc
lib/pyspatialite-3.0.1/: fix_3.0.1_build_after_libspatialite_introduced_version_4.0.patch  setup.py
lib/spatialite-tools-3.1.0b/: Makefile  Makefile-static-Linux  Makefile-static-MacOsX  Makefile-static-MinGW  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  exif_loader.c  libtool  makefile.vc  shell.c  shp_doctor.c  spatialite_gml.c  spatialite_network.c  spatialite_osm_filter.c  spatialite_osm_map.c  spatialite_osm_net.c  spatialite_osm_raw.c  spatialite_tool.c
lib/spatialite-tools-3.1.0b/.deps/: exif_loader.Po  shell.Po  shp_doctor.Po  spatialite_gml.Po  spatialite_network.Po  spatialite_osm_filter.Po  spatialite_osm_map.Po  spatialite_osm_net.Po  spatialite_osm_raw.Po  spatialite_tool.Po
lib/spatialite-tools-4.1.1/: Makefile  Makefile-static-MinGW  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  exif_loader  exif_loader.c  libtool  shell.c  shp_doctor  spatialite  spatialite_convert  spatialite_convert.c  spatialite_dxf  spatialite_dxf.c  spatialite_gml  spatialite_gml.c  spatialite_network  spatialite_network.c  spatialite_osm_filter  spatialite_osm_filter.c  spatialite_osm_map  spatialite_osm_map.c  spatialite_osm_net  spatialite_osm_net.c  spatialite_osm_raw  spatialite_osm_raw.c  spatialite_tool  spatialite_tool.c
lib/spatialite-tools-4.1.1/.deps/: exif_loader.Po  shell.Po  shp_doctor.Po  spatialite_convert.Po  spatialite_dxf.Po  spatialite_gml.Po  spatialite_network.Po  spatialite_osm_filter.Po  spatialite_osm_map.Po  spatialite_osm_net.Po  spatialite_osm_raw.Po  spatialite_tool.Po
notes/: 2013-08-27.txt
sql/: generate-industrial.sql  localize-demography.sql  process-demography.sql
(+71 files in other folders)
